--- a/_posts/2020-03-29-深度探索C++对象模型_读书笔记.md
+++ b/_posts/2020-03-29-深度探索C++对象模型_读书笔记.md
@@ -9,6 +9,10 @@ catalog:    true
 tags:
     - C/C++ 
 ---
+
+读完了C++并发编程实战，记录一下对memory order的理解。
+
+<!--more-->
 # 《深度探索C++对象模型》读书笔记
 ------
 ## 第一章 关于对象
